# paper-mate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  EXPERIENCE.md  LICENSE  README.md  compose.dev.yaml  docker-compose.yml
.bmad/implementation-artifacts/: 1-1-walking-skeleton-app-shell.md  1-2-open-a-pdf-from-disk.md  1-3-render-pages.md  1-4-scroll-and-page-navigation.md  1-5-zoom.md  1-6-pdfjs-decoder-assets.md  1-7-render-perf-windowing.md  1-8-pan-hand-tool.md  1-9-table-of-contents.md  10-1-unify-selection-color-fix-double-thickening.md  10-2-memo-resize-handle-position-min-size.md  10-3-hide-memo-expand-icon-until-focus.md  10-4-resizable-persisted-collapsed-memo.md  10-5-persist-comment-box-position.md  10-6-quick-box-right-of-selection.md  10-7-remember-last-view-on-reopen.md  10-8-pen-four-width-levels.md  10-9-epic-10-structural-refactor.md  2-1-dev-infra-enabler.md  2-10-comment-highlight-pin-bubble.md  2-11-box-select-a-region.md  2-12-drag-to-change-tool-quick-box.md  2-13-pen-alpha.md  2-2-annotation-foundation.md  2-3-highlight-text-via-drag.md  2-4-unify-tool-state-fsm.md  2-5-select-highlight-recolor-delete.md  2-6-arm-time-color-pick.md  2-7-underline-text.md  2-8-pen-freehand.md  2-9-textbox-memo.md  3-1-code-review-codex.md  3-1-edit-annotations-command-path.md  3-2-undo-redo.md  3-3-delete-annotation.md  3-4-autosave-to-disk.md  3-5-restore-on-reopen.md  3-6-annotation-bank.md  3-7-convert-highlight-comment.md  4-1-text-layer-copy-selection-fidelity.md  (+24 more)
.bmad/planning-artifacts/: epics.md  implementation-readiness-report-2026-06-28.md  sprint-change-proposal-2026-06-28-render.md  sprint-change-proposal-2026-06-29-select-highlight.md  sprint-change-proposal-2026-06-29-tool-fsm.md  sprint-change-proposal-2026-06-29.md  sprint-change-proposal-2026-07-02.md  sprint-change-proposal-2026-07-06-library-ux-requests.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
client/: .npmrc  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/scripts/: generate-tokens.mjs
client/src/: App.css  App.test.tsx  App.tsx  BankPanel.test.tsx  BankPanel.tsx  EmptyDropzone.tsx  README.md  Reader.css  Reader.test.tsx  Reader.tsx  SaveIndicator.test.tsx  SaveIndicator.tsx  Toast.tsx  TocPanel.test.tsx  TocPanel.tsx  ToolFlyout.tsx  ToolRail.test.tsx  ToolRail.tsx  ZoomControl.test.tsx  ZoomControl.tsx  bank.test.ts  bank.ts  domFocus.ts  focus-ring.test.ts  index.css  main.tsx  (+7 more)
docs/: API.md  crossref-10.14778_3514061.3514067.json  semantic-scholar-10.14778_3514061.3514067.json
server/: pyproject.toml
server/app/: __init__.py  authors.py  export_openapi.py  main.py  models.py  structure_hybrid.py  structure_mode.py  version.py
server/app/agents/: __init__.py
server/app/domain/: __init__.py  _text.py  arxiv_enrich.py  crossref.py  enrich.py  extract.py  extraction.py  semantic_scholar.py  structure.py
server/app/routes/: __init__.py  _errors.py  docs.py  extraction.py  health.py  library.py  settings.py  structure_status.py
server/app/storage/: __init__.py  annotations_store.py  atomic.py  documents.py  errors.py  folders.py  library_index.py  meta_store.py  paper_org.py  paths.py  pdf.py  settings_store.py  structure_progress.py  structure_store.py
server/tests/: conftest.py  test_authors.py  test_docs.py  test_domain.py  test_health.py  test_library.py  test_models.py  test_openapi.py  test_settings_routes.py  test_settings_store.py  test_static.py  test_storage.py  test_structure.py  test_structure_hybrid.py  test_structure_mode.py  test_version.py
server/tests/fixtures/structure/: odl_1903_multicol.json  odl_adtran_hybrid.json  odl_synthetic_edgecases.json
(+288 files in other folders)
